changes added readme

--- a/animals.html
+++ b/animals.html
@@ -24,20 +24,20 @@
     <div class="row" ><p>Salamander</p></div>
   </div>
   <div class="row">
-    <div class="><p>N</p></div>
-    <div class="><p>A</p></div>
-    <div class="><p>I</p></div>
-    <div class="><p>N</p></div>
-    <div class="><p>I</p></div>
-    <div class="><p>S</p></div> 
+    <div class="col-sm-2"><p>N</p></div>
+    <div class=" col-sm-2"><p>A</p></div>
+    <div class=" col-sm-2"><p>I</p></div>
+    <div class=" col-sm-2"><p>N</p></div>
+    <div class=" col-sm-2"><p>I</p></div>
+    <div class=" col-sm-2"><p>S</p></div> 
   </div>
   <div class="row">
-    <div class=" col-md><p>Nigerian Goat</p></div>
-    <div class=" col-md><p>Antelope</p></div>
-    <div class=" col-md><p>Immortal Jellyfish</p></div>
-    <div class=" col-md><p>Numbat</p></div>
-    <div class=" col-md><p>Iguana</p></div>
-    <div class=" col-md><p>Salamander</p></div>
+    <div class=" col-md"><p>Nigerian Goat</p></div>
+    <div class=" col-md"><p>Antelope</p></div>
+    <div class=" col-md"><p>Immortal Jellyfish</p></div>
+    <div class=" col-md"><p>Numbat</p></div>
+    <div class=" col-md"><p>Iguana</p></div>
+    <div class=" col-md"><p>Salamander</p></div>
   </div>
   <p>Animals row breaks first because height and width constraines are exceeded</p>
 
