animal images added

--- a/animals.html
+++ b/animals.html
@@ -40,6 +40,21 @@
     <div class=" col-md"><p>Salamander</p></div>
   </div>
   <p>Animals row breaks first because height and width constraines are exceeded</p>
-
+  <div class="container">
+    <div class="d-flex justify-content-between">
+          <img src="nigerian goat.jpg" width="400px" height="400px" class="img-fluid">
+          <img src="antelope.jpg" width="400px" height="400px" class="img-fluid">
+          <img src="immortal-jellyfish.jpg" width="400px" height="400px" class="img-fluid">
+  </div>
+</div>
+<br>
+<div class="container">
+  <div class="d-flex justify-content-between">
+          <img src="nigerian goat.jpg" alt="deer" class="img-thumbnail img-fluid" width="400px" height="400px">
+          <img src="antelope.jpg" alt="goat" class="img-thumbnail img-fluid" width="400px" height="400px">
+         <img src="immortal-jellyfish.jpg" alt="numbat" class="img-thumbnail img-fluid" width="400px" height="400px">
+  </div>
+</div>
+<br>
 </body>
 </html>
