--- a/animals.html
+++ b/animals.html
@@ -56,5 +56,55 @@
   </div>
 </div>
 <br>
+
+<br>
+  <table class="table table-bordered table-hover table-sm table-striped" style="width: 100%;">
+    <thread style="text-align: left; border: 2px; font-size: 20px;">
+        <tr style="border: 2px; text-align: center; background-color:brown; color: white;">
+          <th scope="col">Letter</th>
+          <th scope="col">Animal</th>
+          <th scope="col">City</th>
+          <th scope="col">Car</th>
+        </tr>  
+    </thread>
+    <tbody style="text-align: center; border: 2px; width: 60%;">
+        <tr style="border: 2px; text-align: center;" class="table-primary">
+          <th scope="row" style="text-align: center; color:green">N</th>
+          <td>Nigerian Goat</td>
+          <td>Newyork</td>
+          <td>Nissan</td>
+        </tr>
+        <tr class="table-secondary" style="border: 2px; color:green">
+          <th scope="row" style="text-align: center;">A</th>
+          <td>Antelope</td>
+          <td>Amsterdam</td>
+          <td>Audi</td>
+        </tr>
+        <tr class="table-success" style="border: 2px;color:green">
+          <th scope="row" style="text-align: center;">I</th>
+          <td>Immortal Jellyfish</td>
+          <td>Ireland</td>
+          <td>Innocenti</td>
+        </tr>
+        <tr class="table-warning" style="border: 2px;color:green">
+          <th scope="row" style="text-align: center;">N</th>
+          <td>Numbat</td>
+          <td>Newgersey</td>
+          <td>Nikola</td>
+        </tr>
+        <tr class="table-info" style="border: 2px;color:green">
+          <th scope="row" style="text-align: center;">I</th>
+          <td>Iguana</td>
+          <td>Islamabad</td>
+          <td>Isuzu</td>
+        </tr>
+        <tr class="table-danger " style="border: 2px;color:green">
+          <th scope="row" style="text-align: center;">S</th>
+          <td>Salamandar</td>
+          <td>Scotland</td>
+          <td>Scania</td>
+        </tr>
+    </tbody>
+  </table>
 </body>
 </html>
