--- a/animals.html
+++ b/animals.html
@@ -106,5 +106,24 @@
         </tr>
     </tbody>
   </table>
+  <br>
+  <label style="font-size: 1rem; color:black; background-color: green; padding:10px; font-family: Arial, Helvetica, sans-serif;">Button Groups</label>
+  <br>
+  <br>
+  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group" role="group" aria-label="success group">
+    <button type="button" class="btn btn-success">N</button>
+    <button type="button" class="btn btn-success">A</button>
+    <button type="button" class="btn btn-success">I</button>
+  </div>
+  <div class="btn-group" role="group" aria-label="warning group">
+    <button type="button" class="btn btn-warning">N</button>
+    <button type="button" class="btn btn-warning">I</button>
+  </div>
+  <div class="btn-group" role="group" aria-label="danger group">
+    <button type="button" class="btn btn-danger">S</button>
+  </div>
+</div>
+<br/>
 </body>
 </html>
