--- a/animals.html
+++ b/animals.html
@@ -125,5 +125,20 @@
   </div>
 </div>
 <br/>
+
+<div class="dropdown">
+    <div class="btn-group" role="group">
+      <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        Dropdown
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+        <li><a class="dropdown-item" href="plane.html">Plane Page</a></li>
+        <li class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="train.html">Train Page</a></li>
+      </ul>
+    </div>
+  </div>
+  <br/>
+
 </body>
 </html>
