--- a/animals.html
+++ b/animals.html
@@ -15,6 +15,29 @@
 
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-md navbar-light" style="color: purple; background-color:lavender;">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="animals.html">Interesting Animals</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="animals.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="plane.html">Plane</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="train.html">Train</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
   <div class="container">
     <div class="row" ><p>Nigerian Goat</p></div>
     <div class="row" ><p>Antelope</p></div>
@@ -139,6 +162,28 @@
     </div>
   </div>
   <br/>
+
+  <form style="padding-left: 20px;">
+    <div class="form-group">
+      <label for="InputEmail1" class="form-label">&nbsp;Email address</label>
+      <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">&nbsp;We'll never share your email with anyone else.</div>
+    </div>
+    <br/>
+    <div class="form-group">
+      <label for="Animal-label-name" class="form-label">&nbsp;Animal</label>
+      <input type="text" id="animalName" class="form-control" placeholder="Enter your animal">
+    </div>
+    <br/>
+    <div class="form-check">
+      <label class="form-check-label" for="exampleCheck1">Sign up for newsletter? </label>
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    </div>
+    <br/>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+  <br>
+  <br>
 
 </body>
 </html>
