wikipedia link added

--- a/animals.html
+++ b/animals.html
@@ -185,5 +185,40 @@
   <br>
   <br>
 
+
+  <br>
+  <br>
+  <div class="container">
+  <div class="row">
+    <div class="card col-4 p-0">
+      <img src="nigerian goat.jpg" class="card-img-top" width="400px" height="400px">
+      <div class="card-body">
+        <h5 class="card-title">Nigerian Goat</h5>
+        <p class="card-text">The Nigerian Dwarf is an American breed of dwarf goat. 
+            Like the American Pygmy Goat, it derives from the West African Dwarf
+             group of breeds of West Africa.</p>
+        <a href="https://en.wikipedia.org/wiki/Nigerian_Dwarf_goat" class="btn btn-primary">Nigerian Goat</a>
+      </div>
+    </div>
+    <div class="card col-4 p-0">
+      <img src="antelope.jpg" class="card-img-top" width="400px" height="400px">
+      <div class="card-body">
+        <h5 class="card-title">Antelope</h5>
+        <p class="card-text">The term antelope is used to refer to many species of even-toed 
+            ruminant that are indigenous to various regions in Africa and Eurasia..</p>
+        <a href="https://en.wikipedia.org/wiki/Antelope" class="btn btn-primary">Antelope</a>
+      </div>
+    </div>
+    <div class="card col-4 p-0">
+      <img src="immortal-jellyfish.jpg" class="card-img-top" width="400px" height="400px">
+      <div class="card-body">
+        <h5 class="card-title">Immortal jellyfish</h5>
+        <p class="card-text">Turritopsis dohrnii, also known as the immortal jellyfish, 
+            is a species of small, biologically immortal jellyfish[2][3] found worldwide in temperate to tropic waters.</p>
+        <a href="https://en.wikipedia.org/wiki/Numbat" class="btn btn-primary">Immortal jellyfish</a>
+      </div>
+    </div>
+  </div>
+  </div>
 </body>
 </html>
